<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/fragmentLandingToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/color_onyx"
                android:textSize="20sp" />

        </com.google.android.material.appbar.MaterialToolbar>


        <ImageView
            android:id="@+id/fragmentLandingOpen"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/open_content_description"
            android:src="@drawable/ic_open"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragmentLandingToolbar" />

        <TextView
            android:id="@+id/fragmentLandingTitle"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/landing_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentLandingOpen" />

        <TextView
            android:id="@+id/fragmentLandingSubtitle"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/landing_subtitle"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentLandingTitle" />

        <TextView
            android:id="@+id/fragmentLandingActions"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/actions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentLandingSubtitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fragmentLandingTravel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentLandingActions">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/fragmentLandingTravelTextContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/fragmentLandingFly"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/travel" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/travel_description" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/fragmentLandingFly"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:contentDescription="@string/fly_content_description"
                    android:src="@drawable/ic_fly"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/request_travel_info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentLandingTravelTextContainer" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragmentLandingStatsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentLandingTravel">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/fragmentLandingStatsTextContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/fragmentLandingStats"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/stats" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/stats_description" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/fragmentLandingStats"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:contentDescription="@string/fly_content_description"
                    android:src="@drawable/ic_data"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/retrieve_statistics"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentLandingStatsTextContainer" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/fragmentLandingInfo"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/about_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentLandingStatsContainer" />

        <androidx.cardview.widget.CardView
            android:id="@+id/fragmentLandingCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentLandingInfo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/fragmentLandingCodeTextContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/fragmentLandingCodeIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/code" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/code_description" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/fragmentLandingCodeIcon"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:contentDescription="@string/code_content_description"
                    android:src="@drawable/ic_coding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragmentLandingFeedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentLandingCode">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/fragmentLandingFeedbackTextContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/fragmentLandingFeedbackIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/feedback" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/feedback_description" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/fragmentLandingFeedbackIcon"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:contentDescription="@string/feedback_content_description"
                    android:src="@drawable/ic_feedback"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragmentLandingSubmitFeedback"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/submit_feedback"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentLandingFeedbackTextContainer" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
