<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="country"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/fragmentStatisticsInfoToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_for_country"
                android:textColor="@color/color_onyx"
                android:textSize="20sp" />

        </com.google.android.material.appbar.MaterialToolbar>

        <ProgressBar
            android:id="@+id/fragmentStatisticsInfoProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentStatisticsInfoToolbar" />

        <ScrollView
            android:id="@+id/fragmentStatisticsInfoContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentStatisticsInfoToolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/fragmentStatisticsInfoHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/location_content_description"
                        android:src="@drawable/ic_location" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{country, default=`Croatia`}" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stats_info_description"
                        android:textAlignment="center" />

                </LinearLayout>

                <TextView
                    android:id="@+id/fragmentStatisticsInfoStats"
                    style="@style/TextAppearance.MaterialComponents.Overline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/per_region"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentStatisticsInfoHeader" />

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="2dp"
                    app:cardMaxElevation="4dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragmentStatisticsInfoStats">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="42dp"
                            android:layout_height="42dp"
                            android:contentDescription="@string/region_state_content_description"
                            android:src="@drawable/ic_region"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:orientation="vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView2"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Headline6"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/region" />

                            <TextView
                                style="@style/TextAppearance.MaterialComponents.Body2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/region_description" />

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/fragmentStatisticsInfoRecyclerView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>